add test folder and mocha

--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
   },
   "keywords": [],
   "author": "Alexander Pavlovich <alexpimt1917@gmail.com>",
-  "license": "GPL-3.0-or-later"
+  "license": "GPL-3.0-or-later",
+  "devDependencies": {
+    "chai": "^4.3.4",
+    "mocha": "^8.3.2"
+  }
 }
